# pyfanity

./: LICENSE  pyproject.toml  setup.py  test.py
pyfanity/: __init__.py  falseprofanities.py  profanities.py  pyfanity.py  replacements.py  test.py
tests/: test.py
