[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfanity"
version = "0.1.0"
authors = [
    { name = "Kevin Tang", email = "stampixel@pm.me" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stampixel.pyfanity"
"Bug Tracker" = "https://github.com/stampixel/pyfanity/issues"