[tool.poetry]
name = "pyfanity"
version = "0.1.2"
description = "A simple and light weight profanity filter package."
authors = ["bourrasque <stampixel@pm.me>", "Blueblitz135 <aidanleung135@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyfanity" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["feed", "reader", "tutorial"]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
